--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 						<nav id="nav">
 							<ul>
 								<li class="active"><a href="index.html">Homepage</a></li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="PyTweet.html">PyTweet</a></li>
+								<li><a href="EnvioTrack.html">EnvioTrack</a></li>
+								<li><a href="Roboids.html">Roboids</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -65,12 +65,13 @@
 										<p><strong>EnvioTrack</strong>: Build in only 24 hours at Digitize Hackaton, EnvioTrack is a community based communication app, using location data, and storing it all in a cloud server.</p>
 										<!--<a href="#" class="button">Read More</a> </div> -->
 								</section>
-								<section class="4u"> <a href="#" class="image featured"><img src="images/pic03.jpg" alt=""></a>
+								<section class="4u"> <a href="#" class="image featured"><img src="images/Roboids.jpg" alt=""></a>
 									<div class="box">
-										<p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum  wisi maecenas ligula.</p>
-										<a href="#" class="button">Read More</a> </div>
+										<p><strong>Roboids</strong>: A competitive Robotics team with <a href="https://github.com/LakshBhambhani"> Laksh Bhambhani</a>. We have compeated in RoboRave 2018 in Santa Clara.</p>
+										<!--<a href="#" class="button">Read More</a> </div>-->
 								</section>
-							</div>
+                            <!--
+                            </div>
 							<div class="row no-collapse-1">
 								<section class="4u"> <a href="#" class="image featured"><img src="images/pic01.jpg" alt=""></a>
 									<div class="box">
@@ -89,14 +90,15 @@
 								</section>
 							</div>
 						</div>
-					</div>
+                    </div>
+                -->
 
-				<!-- Main -->
+				<!-- Main 
 					<div id="main">
 						<div class="container">
 							<div class="row"> 
-								
-								<!-- Content -->
+                            -->
+								<!-- Content 
 								<div class="6u">
 									<section>
 										<ul class="style">
@@ -126,12 +128,11 @@
 					</div>
 
 	</div>
-
+-->
 	<!-- Copyright -->
 		<div id="copyright">
 			<div class="container">
 				<div class="copyright">
-					<p>Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)</p>
 					<ul class="icons">
 						<li><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
 						<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
