--- a/PyTweet.html
+++ b/PyTweet.html
@@ -37,9 +37,9 @@
 						<nav id="nav">
 							<ul>
 								<li class="active"><a href="index.html">Homepage</a></li>
-								<li><a href="left-sidebar.html">PyTweet</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="PyTweet.html">PyTweet</a></li>
+								<li><a href="EnvioTrack.html">EnvioTrack</a></li>
+								<li><a href="Roboids.html">Roboids</a></li>
 							</ul>
 						</nav>
 					</div>
