--- a/PyTweet.html
+++ b/PyTweet.html
@@ -55,9 +55,9 @@
 								<section>
 									<header class="major">
 										<h2>PyTweet</h2>
-										<span class="byline">Using Twitter API and a python program, PyTweet allows you to tweet automaticaly.</span>
+										<span class="byline"></span>
 									</header>
-									<p>Want a sneekpeak on what I'm doing? Check out the Twitter <a href="https://twitter.com/akshat_adsule">feed</a>.</p>
+									<p>Using Twitter API and a python program, PyTweet allows you to tweet automaticaly. Want a sneekpeak on what I'm doing? Check out the Twitter <a href="https://twitter.com/akshat_adsule">feed</a>.</p>
 								</section>
 							</div>
 		
