--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 				<!-- Header -->
 					<div id="header" class="skel-panels-fixed">
 						<div id="logo">
-							<h1><a href="index.html">Akshat</a></h1>
-							<span class="tag">Adsule</span>
+							<h1><a href="index.html">Akshat Adsule</a></h1>
+							<span class="tag">Website</span>
 						</div>
 						<nav id="nav">
 							<ul>
