--- a/Roboids.html
+++ b/Roboids.html
@@ -65,9 +65,9 @@
 	<!-- Copyright -->
 		<div id="copyright">
 				<ul class="icons">
-					<li><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
-					<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
-					<li><a href="#" class="fa fa-google-plus"><span>Google+</span></a></li>
+					<li><a href="https://www.instagram.com/akshat.adsule/" class="fa fa-instagram"><span>Instagram</span></a></li>
+					<li><a href="https://twitter.com/akshat_adsule" class="fa fa-twitter"><span>Twitter</span></a></li>
+					<li><a href="https://github.com/akshatadsule" class="fa fa-github"><span>Github</span></a></li>
 				</ul>
 			</div>
 		</div>
