--- a/index.html
+++ b/index.html
@@ -1,141 +1,33 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Akshat Adsule</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.dropotron.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-layers.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-wide.css" />
-		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-	</head>
-	<body>
+<head>
+  <meta charset="UTF-8">
+  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta name="description" content="A new Flutter project.">
 
-		<!--  Wrapper  -->
-			<div class="wrapper style1">
+  <!-- iOS meta tags & icons -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="mi_card_flutter">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-				<!-- Header -->
-					<div id="header" class="skel-panels-fixed">
-						<div id="logo">
-							<h1><a href="index.html">Akshat Adsule</a></h1>
-							<span class="tag">Website</span>
-						</div>
-						<nav id="nav">
-							<ul>
-								<li class="active"><a href="index.html">Homepage</a></li>
-								<li><a href="PyTweet.html">PyTweet</a></li>
-								<li><a href="EnvioTrack.html">EnvioTrack</a></li>
-								<li><a href="Roboids.html">Roboids</a></li>
-							</ul>
-						</nav>
-					</div>
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
-				<!-- Banner -->
-					<div id="banner" class="container">
-						<section>
-							<p>This is a website where I may or may not do things. Check out more of my stuff at <a href="https://github.com/AkshatAdsule">my github</a>.</p>
-						</section>
-					</div>
-
-				<!-- Extra -->
-					<div id="extra">
-						<div class="container">
-							<div class="row no-collapse-1">
-								<section class="4u"> <a href="#" class="image featured"><img src="images/PyTweet.jpg" alt=""></a>
-									<div class="box">
-										<p><strong>PyTweet</strong>:    A ongoing project on sending automated tweets and other things.</p>
-										<!--<a href="#" class="button"><a href="https://github.com/AkshatAdsule">Take a look</a></a> </div>-->
-								</section>
-								<section class="4u"> <a href="#" class="image featured"><img src="images/EnvioTrack.png" alt=""></a>
-									<div class="box">
-										<p><strong>EnvioTrack</strong>: Build in only 24 hours at Digitize Hackaton, EnvioTrack is a community based communication app, using location data, and storing it all in a cloud server.</p>
-										<!--<a href="#" class="button">Read More</a> </div> -->
-								</section>
-								<section class="4u"> <a href="#" class="image featured"><img src="images/Roboids.jpg" alt=""></a>
-									<div class="box">
-										<p><strong>Roboids</strong>: A competitive Robotics team with <a href="https://github.com/LakshBhambhani"> Laksh Bhambhani</a>. We have compeated in RoboRave 2018 in Santa Clara.</p>
-										<!--<a href="#" class="button">Read More</a> </div>-->
-								</section>
-                            <!--
-                            </div>
-							<div class="row no-collapse-1">
-								<section class="4u"> <a href="#" class="image featured"><img src="images/pic01.jpg" alt=""></a>
-									<div class="box">
-										<p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum  wisi maecenas ligula.</p>
-										<a href="#" class="button">Read More</a> </div>
-								</section>
-								<section class="4u"> <a href="#" class="image featured"><img src="images/pic02.jpg" alt=""></a>
-									<div class="box">
-										<p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum  wisi maecenas ligula.</p>
-										<a href="#" class="button">Read More</a> </div>
-								</section>
-								<section class="4u"> <a href="#" class="image featured"><img src="images/pic03.jpg" alt=""></a>
-									<div class="box">
-										<p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum  wisi maecenas ligula.</p>
-										<a href="#" class="button">Read More</a> </div>
-								</section>
-							</div>
-						</div>
-                    </div>
-                -->
-
-				<!-- Main 
-					<div id="main">
-						<div class="container">
-							<div class="row"> 
-                            -->
-								<!-- Content 
-								<div class="6u">
-									<section>
-										<ul class="style">
-											<li class="fa fa-wrench">
-												<h3>Integer ultrices</h3>
-												<span>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Maecenas condimentum enim tincidunt risus accumsan.</span> </li>
-											<li class="fa fa-leaf">
-												<h3>Aliquam luctus</h3>
-												<span>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Maecenas condimentum enim tincidunt risus accumsan.</span> </li>
-										</ul>
-									</section>
-								</div>
-								<div class="6u">
-									<section>
-										<ul class="style">
-											<li class="fa fa-cogs">
-												<h3>Integer ultrices</h3>
-												<span>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Maecenas condimentum enim tincidunt risus accumsan.</span> </li>
-											<li class="fa fa-road">
-												<h3>Aliquam luctus</h3>
-												<span>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Maecenas condimentum enim tincidunt risus accumsan.</span> </li>
-										</ul>
-									</section>
-								</div>
-							</div>
-						</div>
-					</div>
-
-	</div>
--->
-	<!-- Copyright -->
-		<div id="copyright">
-			<div class="container">
-				<div class="copyright">
-					<ul class="icons">
-						<li><a href="https://www.instagram.com/akshat.adsule/" class="fa fa-instagram"><span>Instagram</span></a></li>
-						<li><a href="https://twitter.com/akshat_adsule" class="fa fa-twitter"><span>Twitter</span></a></li>
-						<li><a href="https://github.com/akshatadsule" class="fa fa-github"><span>Github</span></a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-
-	</body>
+  <title>mi_card_flutter</title>
+  <link rel="manifest" href="manifest.json">
+</head>
+<body>
+  <!-- This script installs service_worker.js to provide PWA functionality to
+       application. For more information, see:
+       https://developers.google.com/web/fundamentals/primers/service-workers -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function () {
+        navigator.serviceWorker.register('flutter_service_worker.js');
+      });
+    }
+  </script>
+  <script src="main.dart.js" type="application/javascript"></script>
+</body>
 </html>
