--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Hello, world!</title>
+    <title>Akshat Adsule</title>
   </head>
   <body class="text-center">
     <nav class="navbar navbar-expand-lg navbar-dark bg-light">
@@ -19,10 +19,10 @@
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Gallery</a>
+              <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Projects</a>
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
           </ul>
         </div>
@@ -31,8 +31,8 @@
       <div id="main-div" class="center">
           <main role="main" class="inner cover">
             <h1 id="name">Akshat Adsule</h1>
-            <button class="btn btn-ld btn-outline-light main-btn">Gallery</button>
-            <button class="btn btn-ld btn-outline-light main-btn">Projects</button>
+            <button onclick="window.location.replace('gallery.html')" class="btn btn-lg btn-outline-light main-btn">Gallery</button>
+            <button onclick="window.location.replace('projects.html')" class="btn btn-lg btn-outline-light main-btn">Projects</button>
           </main>
       </div>
 
