--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col-lg-4 md-6 sm-12 card-div">
                 <div class="lokal card">
-                    <img src="img/lokal.png" class="card-img-top lokal-img" alt="lokal logo">
+                    <img src="img/projects/lokal.png" class="card-img-top lokal-img" alt="lokal logo">
                     <div class="card-body">
                         <h5 class="card-title">Lokal</h5>
                         <p class="card-text">Lokal is a location based micro-blog platform. The posts you see are only from people around you, and your posts are visible people around you. Built with Express, MongoDB, bcrypt, EJS, and Bootstrap</p>
@@ -41,7 +41,7 @@
             </div>
             <div class="col-lg-4 md-6 sm-12 card-div">
                 <div class="odad card">
-                    <img src="img/odad-logo.png" class="card-img-top odad-img" alt="...">
+                    <img src="img/projects/odad-logo.png" class="card-img-top odad-img" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">One Deed A Day</h5>
                         <p class="card-text">Complete one deed a day to help out people in your community. Create and share deed for others to do, and collectively help out. Being buit with Express, MongoDB, bcrypt, EJS, and Bootstrap</p>
@@ -51,7 +51,7 @@
             </div>
             <div class="col-lg-4 md-6 sm-12 card-div">
                 <div class="flashchat card">
-                    <img src="https://camo.githubusercontent.com/8b2cfa163a872b21a98952b1661379cdbcb86e65/68747470733a2f2f692e6962622e636f2f4a6e354737304a2f6c6f676f2e706e67" class="card-img-top lokal-img" alt="...">
+                    <img src="img/projects/flashchat.png" class="card-img-top lokal-img" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">FlashChat</h5>
                         <p class="card-text">FlashChat is a instant messaging app. Flash    Chat uses firebase for a realtime chat with other users. Built with Flutter, Firebase auth and Firestore</p>
