--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
+    <meta name="google-site-verification" content="trLVSZ-TJpA8hYwp1PHq3LxWJnVXyn8LS9ax3g6SFcA" />
     <title>Akshat Adsule</title>
   </head>
   <body class="text-center">
