Change up ui and fonts to match blog
Former-commit-id: 664cf77d1acbca0d067b0d61e65dfb2e4808a935

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="gallery.html">Gallery</a>
+          <a class="nav-link" href="https://blog.aksads.tech">Blog</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="projects.html">Projects</a>
@@ -41,10 +41,10 @@
   <div id="main-div" class="center">
     <main role="main" class="inner cover">
       <h1 id="name">Akshat Adsule</h1>
-      <button onclick="window.location.replace('gallery.html')"
-        class="btn btn-lg btn-outline-light main-btn">Gallery</button>
-      <button onclick="window.location.replace('projects.html')"
-        class="btn btn-lg btn-outline-light main-btn">Projects</button>
+      <a href="https://blog.aksads.tech"
+        class="btn btn-lg btn-outline-light main-btn">Blog</a>
+      <a href="projects.html"
+        class="btn btn-lg btn-outline-light main-btn">Projects</a>
     </main>
   </div>
 
