--- a/index.html
+++ b/index.html
@@ -1,31 +1,60 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="favicon/apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="favicon/favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="favicon/favicon-16x16.png"
+		/>
+		<link rel="manifest" href="favicon/site.webmanifest" />
+		<meta
+			name="google-site-verification"
+			content="trLVSZ-TJpA8hYwp1PHq3LxWJnVXyn8LS9ax3g6SFcA"
+		/>
+		<meta name="description" content="Personal site of Akshat Adsule." />
+		<script
+			src="https://kit.fontawesome.com/d2f0c9369f.js"
+			crossorigin="anonymous"
+		></script>
+		<title>Akshat Adsule</title>
+	</head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-  <link rel="manifest" href="favicon/site.webmanifest">
-  <meta name="google-site-verification" content="trLVSZ-TJpA8hYwp1PHq3LxWJnVXyn8LS9ax3g6SFcA" />
-  <meta name="description" content="Personal site of Akshat Adsule.">
-  <script src="https://kit.fontawesome.com/d2f0c9369f.js" crossorigin="anonymous"></script>
-  <title>Akshat Adsule</title>
-</head>
+	<body>
+		<canvas id="bg"></canvas>
 
-<body>
-  <canvas id="bg"></canvas>
-
-  <main>
-    <div class="btns">
-      <a href="https://blog.aksads.tech" class="btn"><i class="fas fa-rss"></i> Blog</a>
-      <a href="https://www.github.com/AkshatAdsule" class="btn"><i class="fab fa-github"></i> GitHub</a>
-      <a href="https://www.linkedin.com/in/akshatadsule/" class="btn"><i class="fab fa-linkedin"></i> LinkedIn</a>
-      <a href="https://www.instagram.com/akshat.adsule" class="btn"><i class="fab fa-instagram"></i> Instagram</a>
-    </div>
-  </main>
-  <script type="module" src="/src/main.ts"></script>
-</body>
-
+		<main>
+			<div class="btns">
+				<a href="https://blog.aksads.tech" class="btn"
+					><i class="fas fa-rss"></i> Blog</a
+				>
+				<a href="https://www.github.com/AkshatAdsule" class="btn"
+					><i class="fab fa-github"></i> GitHub</a
+				>
+				<a href="https://www.linkedin.com/in/akshatadsule/" class="btn"
+					><i class="fab fa-linkedin"></i> LinkedIn</a
+				>
+				<a href="https://www.instagram.com/akshat.adsule" class="btn"
+					><i class="fab fa-instagram"></i> Instagram</a
+				>
+			</div>
+		</main>
+		<script type="module" src="/src/main.ts"></script>
+	</body>
 </html>
